--- a/index..html
+++ b/index..html
@@ -55,7 +55,7 @@
     }
 
     .cta {
-      background-color: #ff6b6b;
+      background-color: #fff;
       border: none;
       color: #fff;
       padding: 1rem 2rem;
