--- a/index..html
+++ b/index..html
@@ -115,9 +115,9 @@
 
   <main>
     <section class="hero">
-      <h1>Welcome to Our E-commerce Store</h1>
-      <p>Discover the best products for your needs.</p>
-      <button class="cta">Shop Now</button>
+      <h1 style="color: #333333; background-color: #FFFFFF;">Welcome to Our E-commerce Store</h1>
+      <p style="color: #333333; background-color: #FFFFFF;">Discover the best products for your needs.</p>
+      <button class="cta" style="color: #333333; background-color: #FFFFFF;">Shop Now</button>
     </section>
 
     <section class="products">
@@ -127,7 +127,7 @@
           <img src="product1.jpg" alt="Product 1">
           <h3>Product 1</h3>
           <p>Description of Product 1</p>
-          <button class="add-to-cart">Add to Cart</button>
+          <button class="add-to-cart" style="color: #333333; background-color: #FFFFFF;">Add to Cart</button>
         </div>
         <!-- Add more product cards here -->
       </div>
